# Processing_16-bit_TIFF

./: CMakeLists.txt  accuracytable.cpp  accuracytable.h  accuracytable.ui  barchartplot.cpp  barchartplot.h  geoimage.cpp  geoimage.h  histogram.cpp  histogram.h  histogram.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  mylabel.cpp  mylabel.h  mypicker.cpp  mypicker.h  plot.cpp  plot.h  progress.cpp  progress.h  rastermatrix.h  rpc.cpp  rpc.h  transformimagesdialog.cpp  transformimagesdialog.h  transformimagesdialog.ui
tiff/cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  libtiff-4.pc  tiff.sln  tiff_release.vcxproj  tiff_release.vcxproj.filters
tiff/cmake-build/contrib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
tiff/cmake-build/doc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
tiff/cmake-build/libtiff/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  libtiffTargets.cmake  tiff.vcxproj  tiff.vcxproj.filters  tiff_faxtable.vcxproj  tiff_faxtable.vcxproj.filters  tiff_mkg3states.vcxproj  tiff_mkg3states.vcxproj.filters  tiffxx.vcxproj  tiffxx.vcxproj.filters
tiff/cmake-build/port/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  tiff_port.vcxproj  tiff_port.vcxproj.filters
tiff/cmake-build/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ascii_tag.vcxproj  ascii_tag.vcxproj.filters  custom_dir.vcxproj  custom_dir.vcxproj.filters  custom_dir_EXIF_231.vcxproj  custom_dir_EXIF_231.vcxproj.filters  rewrite.vcxproj  (+23 more)
Оценка точности/: marsel.txt  sam1.txt  sam2.txt  формат файла.txt
(+331 files in other folders)
